Helium: Fix logo image overlapping hamburger menu icon in mobile view (#1691)

--- a/themes/helium/common/scss/helium/particles/_logo.scss
+++ b/themes/helium/common/scss/helium/particles/_logo.scss
@@ -23,5 +23,10 @@
 		display: block;
 		text-align: center;
 		margin: -0.85rem 0;
+
+        img, svg {
+            max-width: 190px;
+            margin: 0 auto;
+        }
 	}
 }
